--- a/index.html
+++ b/index.html
@@ -11,11 +11,49 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="app-container">
+    <div id="authSection" class="app-container">
+      <div class="app-header">
+        <h1 id="authTitle">Sign In</h1>
+        <p id="authSubtitle">Manage your tasks securely</p>
+      </div>
+      <div class="input-wrapper" style="flex-direction: column">
+        <input type="text" id="usernameAuth" placeholder="Username" />
+        <input type="password" id="passwordAuth" placeholder="Password" />
+        <button
+          onclick="handleAuth()"
+          id="authBtn"
+          style="width: 100%; height: 45px"
+        >
+          Sign In
+        </button>
+      </div>
+      <p style="text-align: center; font-size: 0.9rem; margin-top: 15px">
+        <span id="authToggleText">Don't have an account?</span>
+        <a
+          href="#"
+          onclick="toggleAuthMode()"
+          id="authToggleLink"
+          style="color: var(--primary); font-weight: 600"
+          >Sign Up</a
+        >
+      </p>
+    </div>
+
+    <div id="mainContent" class="app-container hidden">
       <div class="app-header">
         <div class="title-group">
-          <h1>My Workspace</h1>
-          <p>Stay organized and productive</p>
+          <h1 id="welcomeUser">My Workspace</h1>
+          <p
+            onclick="logout()"
+            style="
+              color: var(--danger);
+              cursor: pointer;
+              font-size: 0.8rem;
+              font-weight: 600;
+            "
+          >
+            Logout
+          </p>
         </div>
         <div id="taskCount" class="status-pill">0 Tasks</div>
       </div>
@@ -32,15 +70,11 @@
           <option value="Personal" selected>Personal</option>
           <option value="Urgent">Urgent</option>
         </select>
-        <button onclick="addTask()" id="addBtn">Add Task</button>
+        <button onclick="addTask()" id="addBtn">Add</button>
       </div>
 
-      <div class="filter-bar">
-        <span>Recent Tasks</span>
-      </div>
-
+      <div class="filter-bar"><span>Recent Tasks</span></div>
       <div id="taskList" class="task-list"></div>
-
       <div id="emptyState" class="empty-state hidden">
         <div class="empty-icon">✓</div>
         <p>You're all caught up!</p>
