--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="text" id="usernameAuth" placeholder="Username" />
         <input type="password" id="passwordAuth" placeholder="Password" />
         <button
+          type="button"
           onclick="handleAuth()"
           id="authBtn"
           style="width: 100%; height: 45px"
